--- a/style.css
+++ b/style.css
@@ -31,6 +31,9 @@ html,body{
 .left-top-right{
     padding: 20px;
 }
+.left-top-right h6{
+   display: none;
+}
 .left-top-right h4{
     justify-self: end;
     margin-bottom: 15px;
@@ -43,7 +46,6 @@ html,body{
 }
 
 .center{
-    /* background-color: aqua; */
     padding-top:3.5vh;
     padding-left: 2vw;
     grid-column: 1/3;
@@ -61,7 +63,6 @@ html,body{
     margin-top: 15px;
 }
 .bottom{
-    /* background-color:yellow; */
     grid-column: 1/3;
 }
 .bottom h5{
@@ -69,7 +70,6 @@ html,body{
     font-size: .8vw;
 }
 .right{
-    /* background-color: violet; */
     grid-column: 3;
     grid-row: 1/4;
     padding-right:50px;
@@ -80,4 +80,80 @@ html,body{
     height: 100%;
     object-fit:cover;
     border-radius: 20px;
+}
+.arrow{
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    width: 80px;
+    height: 80px;
+    background-color: rgb(255, 95, 37);
+    border-radius: 50%;
+    position: absolute;
+    top: 50%;
+    left: 49%;
+    padding: 10px 10px;
+}
+.arrow i{
+    font-size: 50px;
+    font-weight: 200;
+}
+@media (max-width:600px){
+    .main{
+        grid-template-columns:50% 50%;
+        grid-template-rows: 12% 38% 8% 42%;
+    }
+    .left-top-left{
+        padding: 25px;
+    }
+    .sqare{
+        width: 20px;
+        height: 20px;
+    }
+    .left-top-right h6{
+        font-size: 35px;
+        justify-self: end;
+    }
+    .left-top-right h4{
+        display: none;
+    }
+    .left-top-right h5{
+        display: none;
+        
+    }
+    .center{
+        padding-top:1vh;
+        padding-left: 4vw;
+
+    }
+    .center h1{
+        font-size: 15vw;
+        line-height: 88%;
+        font-weight: 320;
+    }
+    .bottom h5{
+        padding: 15px 20px;
+        font-size: 1.5vw;
+    }
+    .right{
+        grid-column: 1/3;
+        grid-row: 4;   
+        padding: 8px;
+    }
+    .right video{
+        border-radius: 10px;
+    }
+    .arrow{
+        width: 50px;
+        height: 50px;
+        position: absolute;
+        top: 56%;
+        left: 50%;
+        padding: 10px 10px;
+    }
+    .arrow i{
+        font-size: 40px;
+        rotate: 90deg;
+        font-weight: 200;
+    }
 }
